@@ -1,3 +1,10 @@
+2007-12-19  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/renderer-combo.c:
+
+	Replace the GetProtocolInfoData with a duplicate of udn since that is
+	all that is needed in the get_protocol_info_cb().
+
 2007-12-17  Zeeshan Ali Khattak  <zeenix@gstreamer.net>
 
 	* src/av-cp/renderer-combo.c:
